Initial commit: Proyecto del Zoológico en Java

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Zool_gicoApp.jar
+dist.jar=${dist.dir}/ZoologicoApp.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/Zool_gicoApp
+dist.jlink.output=${dist.jlink.dir}/ZoologicoApp
 excludes=
 includes=**
 jar.compress=false
@@ -70,8 +70,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=Zool_gicoApp
-main.class=zool\u00f3gicoapp.Zool\u00f3gicoApp
+jlink.launcher.name=ZoologicoApp
+main.class=zoologicoapp.Zool\u00f3gicoApp
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
